--- a/plugins/package.xml
+++ b/plugins/package.xml
@@ -12,10 +12,12 @@
   <build_depend>rclcpp</build_depend>
   <build_depend>rclcpp_lifecycle</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>performance_test</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_lifecycle</exec_depend>
   <exec_depend>pluginlib</exec_depend>
+  <exec_depend>performance_test</exec_depend>
 
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
