--- a/plugins_performance/package.xml
+++ b/plugins_performance/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>plugins</name>
+  <name>plugins_performance</name>
   <version>1.0.0</version>
   <description>TODO</description>
   <maintainer email="bwilcox@irobot.com">Brian Wilcox</maintainer>
